--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* :focus {
+  @apply outline-none;
+  box-shadow: 0 0 0 2px #22c55e;
+}
